syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "auth.proto";
import "google/protobuf/empty.proto";


service CompanyService {
    rpc Register(RegisterCompanyRequest) returns (CompanyPrimaryKey) {}
    rpc Update(UpdateCompanyRequest) returns (google.protobuf.Empty) {}
    rpc Remove(CompanyPrimaryKey) returns (google.protobuf.Empty) {}
}



message RegisterCompanyRequest {
    message RegisterUserInfo {
        string phone = 1;
        string email = 2;
        string login = 3;
        string password = 4;
    }
    string name = 1;
    RegisterUserInfo user_info = 2;
}

message CompanyPrimaryKey {
    string id = 1;
}

message UpdateCompanyRequest {
    string id = 1;
    string name = 2;
}