syntax="proto3";

package company_service;
option go_package="genproto/company_service";


service ProjectService {
    rpc Create(CreateProjectRequest) returns (CreateProjectResponse) {}
    rpc GetList(GetProjectListRequest) returns (GetProjectListResponse) {}
    rpc GetById(GetProjectByIdRequest) returns (Project) {}
    rpc Update(Project) returns (Project) {}
    rpc Delete(DeleteProjectRequest) returns (EmptyProto) {}
    rpc AddResource(AddResourceRequest) returns (AddResourceResponse) {}
    rpc RemoveResource(RemoveResourceRequest) returns (EmptyProto) {}
}

enum ServiceType {
    NOT_SPECIFIED = 0;
    BUILDER_SERVICE = 1;
    ANALYTICS_SERVICE = 2;
}

enum ResourceType {
    NOT_DECIDED = 0;
    MONGODB = 1;
    CLICKHOUSE = 2;
    POSTGRESQL = 3;
}

message Resource {
    message Credentials {
        string host = 1;
        string port = 2;
        string username = 3;
        string password = 4;
        string database = 5;
    }
    ServiceType service_type = 1;
    ResourceType resource_type = 2;
    Credentials credentials = 3;
}

message Project {
    message Resource {
        message Credentials {
            string host = 1;
            string port = 2;
            string username = 3;
            string database = 4;
        }
        ServiceType service_type = 1;
        ResourceType resource_type = 2;
        Credentials credentials = 3;
    }

    string project_id = 1;
    string company_id = 2;
    string k8s_namespace = 3;
    string title = 4;
    repeated Project.Resource resources = 5;
}

message CreateProjectRequest {
    string company_id = 1;
    string k8s_namespace = 2;
    string title = 3;
    repeated Resource resources = 4;
}

message CreateProjectResponse {
    string project_id = 1;
}

message GetProjectListRequest {
    int32 limit = 1;
    int32 offset = 2;
    string company_id = 3;
    string search = 4;
}

message GetProjectListResponse {
    int32 count = 1;
    repeated Project projects = 2;
}

message GetProjectByIdRequest {
    string project_id = 1;
    string company_id = 2;
}

message DeleteProjectRequest {
    string project_id = 1;
    string company_id = 2;
}

message EmptyProto {
    
}

message AddResourceRequest {
    string project_id = 1;
    repeated Resource resources = 2;
    string company_id = 3;
}

message AddResourceResponse {
    string project_id = 1;
    ServiceType service_type = 2;
    ResourceType resource_type = 3;
    string company_id = 4;
}

message RemoveResourceRequest {
    string project_id = 1;
    ServiceType service_type = 2;
    ResourceType resource_type = 3;
    string company_id = 4;
}